...
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_first_name"
            android:autofillHints="@string/hint_first_name"
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_last_name"
            android:autofillHints="@string/hint_last_name"
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_address"
            android:autofillHints="email"
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_username"
            android:autofillHints="username"
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toBottomOf="@+id/email"
            />

        <EditText
            android:id="@+id/occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_occupation"
            android:autofillHints="occupation"
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toBottomOf="@id/username"
            />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/enter_description"
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toBottomOf="@id/occupation"
            />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margins"
            android:textSize="30sp"
            android:text="@string/empty_dob"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/dob_button"
            app:layout_constraintTop_toBottomOf="@id/description"
            />

        <Button
            android:id="@+id/dob_button"
            android:layout_width="wrap_content"
...
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toBottomOf="@+id/dob_button"
            android:onClick="onSubmit"
            />

        <TextView
            android:id="@+id/my_name_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_date"
            app:layout_constraintBottom_toBottomOf="@id/signup"
            />

        <TextView
            android:id="@+id/errorsMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margins"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            />

...
