...
            android:layout_marginTop="@dimen/header_mTop"
            android:layout_marginStart="@dimen/header_mStart"
            android:layout_marginEnd="@dimen/header_mEnd"
            />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/profile_name_height"
                android:autoSizeTextType="uniform"
                app:layout_constraintWidth_percent="0.75"
                android:text="@string/profile_name"
                android:textSize="@dimen/name_font_size"
...
                android:layout_marginTop="@dimen/profile_name_mTop"
                app:layout_constraintTop_toTopOf="@id/profileHeader"
                app:layout_constraintStart_toStartOf="@id/profileHeader"
                />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_age"
                android:textSize="@dimen/name_font_size"
                app:layout_constraintStart_toEndOf="@id/profileName"
                app:layout_constraintTop_toTopOf="@id/profileHeader"
                android:layout_marginStart="@dimen/age_spacing"
                android:layout_marginTop="@dimen/profile_name_mTop"
                />

            <TextView
                android:id="@+id/profileOccupation"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/profile_occ_height"
                android:autoSizeTextType="uniform"
                app:layout_constraintWidth_percent="0.75"
                android:text="@string/profile_occupation"
                android:textSize="@dimen/occupation_font_size"
                app:layout_constraintStart_toStartOf="@id/profileHeader"
                app:layout_constraintTop_toBottomOf="@id/profileName"
                android:layout_marginStart="@dimen/profile_occ_start_margin"
                />

        <TextView
            android:id="@+id/profileDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileHeader"
            android:layout_marginTop="@dimen/profile_desc_mTop"
            android:text="@string/lorem"
...
